--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -10,7 +10,7 @@ body{
 }
 p{
     font-family: 'TT Firs Neue Thin';
-    font-size: 16px;
+    font-size: 14px;
 }
 h1, h2, h3, h4 {
     font-family: 'TT Firs Neue Light'
@@ -31,10 +31,11 @@ h1, h2, h3, h4 {
     background-color: #ffffff;
     font-family: 'TT Firs Neue Thin';
     box-shadow: 2px 5px 8px rgb(106, 124, 124);
+    width: 100%;
 }
 
 .logo img{
-    width:300px;
+    width:100%;
     height:150px;
 }
 
@@ -144,6 +145,7 @@ h1, h2, h3, h4 {
 .nav-menu-items {
     display: block;
     justify-content: flex-start;
+    width: 100%;
 }
 
 .breadcrumb {
@@ -214,10 +216,8 @@ h1, h2, h3, h4 {
     text-decoration: none;
 }
 .about-text-side a:hover{
-    border: 5px rgb(21, 250, 181) solid;
-    transition: 2s;
+    border: 1px rgb(21, 250, 181) solid;
     transform: scale(1.5);
-    margin: 8px;
 }
 
 .fade-in{
@@ -235,6 +235,11 @@ h1, h2, h3, h4 {
         opacity: 1;
         transition: all 1s;
     }
+    .logo img {
+        width: 100%;
+        height: 100px;
+    }
+
     .nav-elements{
         display: grid;
         grid-template-columns: 1fr;
