--- a/templates/about.html
+++ b/templates/about.html
@@ -94,7 +94,7 @@
                         <label for="Message">Message</label>
                         {{forms.message}}
                         <!-- {{ forms.as_p }} -->
-                        <input type="submit" value="Submit" style="background-color: rgb(0, 38, 255); padding: 10px 40px; border-radius: 10px; border: none; cursor: pointer;" name="Submit">                    
+                        <input type="submit" value="Submit" style="background-color: rgb(4, 18, 95); padding: 10px 40px; border-radius: 10px; border: none; cursor: pointer;color: azure;font-size: large;" name="Submit">                    
                     </form>
 
                 </div>
