--- a/templates/about.html
+++ b/templates/about.html
@@ -25,57 +25,59 @@
                     <div class="our-leaders">
                         <div class="our-leaders-indiv fade-in">
                            <img src="{% static './img/beautiful worship.jpg' %}" alt="our leaders">
-                           <p for="img">REVEREND EASTMAN</p>
+                           <p for="img">PROPHET COFIE POWERMAN BEKOE</p>
                         </div>
                         <div class="our-leaders-indiv fade-in">
                             <img src="{% static './img/prayerfulsmile.jpg' %}" alt="our leaders">
-                            <p for="img">REV PASTOR WEST</p>
+                            <p for="img">PROHETESS TRACY POWERMAN BEKOE</p>
                         </div>
-                        <div class="our-leaders-indiv fade-in">
-                            <img src="{% static './img/beautiful worship.jpg' %}" alt="our leaders">
-                            <p for="img">PASTOR WEST</p>
-                        </div>
-                        <div class="our-leaders-indiv fade-in">
-                            <img src="{% static './img/prayerfulsmile.jpg' %}" alt="our leaders">
-                            <p for="img">ELDER NORTH</p>
-                        </div>
-                        
+                                               
                     </div>
                 </div>
                 <div class="about-content">
                     <div class="about-left-text-area">
                         <h1 style="font-size: 24px;">Attributes we Possess</h1>
                         <div class="about-links">
+                            <a href="#church">Our Church</a>
                             <a href="#vision">Our Vision</a>
                             <a href="#mission">Our Mission</a>
-                            <a href="#church">Our Church</a>
-                            <a href="#values">Our Values</a> 
                         </div>                 
                     </div>
 
                     <div class="about-right-text-area">
                         <div id="vision" class="ambitions fade-in">
-                            <h3>Our Vision</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, ea aut quas vel, repellat incidunt est commodi rerum dolore nesciunt facilis. Facilis magni ratione incidunt quia quam adipisci natus dolor! Iste distinctio eos perferendis quod facere modi quidem, ipsam vitae et, rerum non! Reiciendis repellat impedit provident numquam dignissimos dicta ipsam dolores sapiente, unde, repellendus id aliquid libero? Nisi enim at quam ut, maxime quis consectetur atque non quia ex omnis modi error sapiente praesentium aliquam saepe perferendis beatae eligendi.</p>
+                            <h3>Our Church</h3>
+                            <p>Welcome to Cofie Bekoe Ministries.</p>
+                            <p>We are a home for the godly, focused on spreading the knowldge of the glory of God to the world; the supreme invaluable knowledge of <b>Jesus Christ!</b></p>
+                            <p>Here, you will find answers to all the questions you may have about 
+                                god and fulfilling the word of God. Do enjoy your stay here.
+                            </p>
                         </div>
                         <div class="ambitions fade-in" id="mission">
-                            <h3>Our Mision</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dignissimos tenetur sint expedita voluptatibus rem cupiditate, rerum quidem eveniet adipisci nam eum aspernatur odio officia ullam. Nemo repellendus dolorem omnis autem sed quam corporis velit corrupti repellat, quas dicta vero provident vitae aperiam, magnam ut. Ex sapiente perspiciatis reprehenderit exercitationem facere nostrum est id incidunt, alias dolorum dolores soluta. Explicabo natus ad numquam ipsam deleniti velit necessitatibus sunt inventore, veritatis voluptatum nemo ipsa unde esse tempora! Ducimus iure minus omnis?</p>
+                            <h3>Our Vision</h3>
+                            <p>Our mission is to awaken the Zoe, god-kind of life in every man on the earth, to manifest and demonstrate the authority and power of God through the knowldge of <b>Jesus Christ.</b></p>
                         </div>
                         <div class="ambitions fade-in lozad" id="church">
-                            <h3>Our Church</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis facilis voluptatibus et illo deserunt. Quas architecto harum accusamus officia. Rem sint beatae veritatis. Voluptatum nostrum quisquam non id deserunt ratione repellat, quam dolor aut animi! Nihil, ipsum omnis minima illo cum autem neque asperiores nulla voluptates blanditiis unde sit consequatur obcaecati cumque excepturi repudiandae ad et exercitationem eius culpa enim.</p>
+                            <h3>Our Mision</h3>
+                            <p>Our mission is to win souls for <b>Christ</b> by any means possible through His saving knowledge and redemptive life-transforming power.</p>
                         </div>
-                        <div class="ambitions fade-in lozad" id="values">
-                            <h3>Our Values</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis facilis voluptatibus et illo deserunt. Quas architecto harum accusamus officia. Rem sint beatae veritatis. Voluptatum nostrum quisquam non id deserunt ratione repellat, quam dolor aut animi! Nihil, ipsum omnis minima illo cum autem neque asperiores nulla voluptates blanditiis unde sit consequatur obcaecati cumque excepturi repudiandae ad et exercitationem eius culpa enim.</p>
-                        </div>
+
                     </div>
                 </div>
             </section>
             <section class="contact-section">
-                <h1 style="font-size: 24px;">Contact Us</h1>
-                <div class="contact-form fade-in">
+                <div>
+                    <h1 style="font-size: 24px;">Contact Us</h1>
+                    <div class="contact-details">
+                        <p><b>Prophet Cofie PowerMan Bekoe</b></p>
+                        <p>Email: cofiebekoeministries@gmail.com</p>
+                        <p>Phone: +233556978861</p>
+                        <p><b>Address</b></p>
+                        <p>Post Office Box TI515</p>
+                        <p>Accra West Ghana</p>
+                    </div>
+                </div>
+                <div class="contact-form">
                     <form action="" method="post">
                         {% csrf_token %}
                         <label for="Full Name">Full Name</label>
