--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COFIE BEKOE MINISTRY</title>
+    <title>PROPHET COFIE POWERMAN BEKOE MINISTRY</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 
@@ -41,7 +41,7 @@
             {% block content %}
             <div class="hero-banner">
                 <div class="hero-banner-comps" style="display:block; text-align:center; justify-content: center;">
-                    <h1 style="color: rgb(255, 255, 255); font-size:32px; padding-bottom: 10px;">Welcome to Cofie Bekoe Ministries</h1>
+                    <h1 style="color: rgb(255, 255, 255); font-size:32px; padding-bottom: 10px;">Welcome to Prophet Cofie PowerMan Bekoe Ministries</h1>
                     <p>No weapon that is formed against thee shall prosper; and every tongue that shall rise agianst thee in judgement thou shalt condemn. This is the heritage of the servants of the LORD, and their righteousness is of me, saith the LORD - ISAIAH 54:17</p>
                     <a style="border: 3px solid #44a2bc;background: transparent; padding: 8px 20px;color: #44a2bc; border-radius: 15px;" href="{% url 'events' %}">CONNECT</a>
                 </div>
@@ -52,13 +52,17 @@
             <h1 style="font-size: 24px; color: #44a2bc;">ABOUT US</h1>
             <div class="main-items">
                 <div class="about-text-side lazy fade-in">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita suscipit consectetur veniam, velit facere voluptatibus laboriosam illum atque est praesentium esse quia. Voluptatum ea delectus, a sequi quaerat molestiae vel minus harum fugiat distinctio ad illo earum facere non assumenda, perferendis dolorum ut iste laborum impedit? Quasi voluptas assumenda reiciendis neque animi molestiae! Quos fugit dolorem labore sequi assumenda dolores dolore ab alias voluptatum debitis commodi totam ex, temporibus enim. Quo quod iusto officiis quae doloremque delectus dolorum repellendus. Qui placeat odit in velit, corrupti provident facere dolore deserunt temporibus sunt quas? </p>
+                    <p>We are an assignment of God established upon the earth to fulfill the will of God.</p>
+                    <p>A ministry of God through the Holy Spirit to send <b>Jesus</b> to the world.</p>
+    
+                    <p>We are physically located in Ghana and Spiritually located in God, empowered by the <b>Holy Spirit</b> to do everything possible for <b>Jesus</b> to be known across the world.</p>
                     <a href="{% url 'about' %}">Read More</a>
                 </div>
 
                 <div class="about-image-side lazy fade-in">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, sunt magni expedita doloribus saepe esse facere. Corporis consequatur quos dolores saepe, itaque ad debitis! Reprehenderit quisquam molestiae culpa iusto, eveniet distinctio commodi, pariatur enim illum laboriosam repellat? Tempore, labore? Nostrum consectetur beatae, ab animi cumque dolores iste voluptates porro cum exercitationem esse, omnis tempora, odio dignissimos incidunt?</p>
+                    <p>{{verses.verse}}</p>
                 </div>
+
             </div>
 
             <div class="image-gallery">
@@ -99,14 +103,16 @@
         <div class="footer-items">
             <div class="footer lozad">
                 <h2>Address</h2>
-                <p>No. 121 Lagos Avenue Road</p>
-                <p>EastSide Accra</p>
+                <p>POST OFFICE BOX TI515</p>
+                <p>ACCRA WEST GHANA</p>
+                <br>
+                <p>Phone: +233556978861</p>
+                <p>Email: cofiebekoeministries@gmail.com</p>
             </div>
             <div class="footer lozad">
                 <h2>Church Hours</h2>
                 <p>Days: Monday - Sunday</p>
                 <p>Time: 8am - 4pm</p>
-                <p>Phone: +233544910055</p>
             </div>
             <div class="footer lozad">
                 <h2>Follow Us</h2>
