initial commit from ubuntu

--- a/templates/about.html
+++ b/templates/about.html
@@ -74,7 +74,7 @@
                         <p>Phone: +233556978861</p>
                         <p><b>Address</b></p>
                         <p>Post Office Box TI515</p>
-                        <p>Accra West Ghana</p>
+                        <p>Accra West, Ghana</p>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -95,14 +95,12 @@
                         </div>
                         <label for="Message">Message</label>
                         {{forms.message}}
-                        <!-- {{ forms.as_p }} -->
                         <input type="submit" value="Submit" style="background-color: rgb(4, 18, 95); padding: 10px 40px; border-radius: 10px; border: none; cursor: pointer;color: azure;font-size: large;" name="Submit">                    
                     </form>
 
                 </div>
             </section>
         </main>
-    </section>
     {% endblock content %}
     <!-- Footer section -->
 
