--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
             <div class="footer lozad">
                 <h2>Address</h2>
                 <p>POST OFFICE BOX TI515</p>
-                <p>ACCRA WEST GHANA</p>
+                <p>ACCRA WEST, GHANA</p>
                 <br>
                 <p>Phone: +233556978861</p>
                 <p>Email: cofiebekoeministries@gmail.com</p>
