--- a/templates/give.html
+++ b/templates/give.html
@@ -2,13 +2,20 @@
 {% load static %}
 
     {% block content %}
-    <link rel="stylesheet" href="give.css">
+    <link rel="stylesheet" href="{% static 'css/give.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 
-        <main>
-            <section>
+        <main class="container">
+            <section class="body-section">
                 <h1>For God loves a cheerful giver</h1>
-
+                <p><b>If our activities touch your heart and you wish to support us in any way, you can use the below means to send your gift and God will bless and increase your barn</b></p><br><br>
+                <p>Reference Name: <b>Cofie Bekoe</b></p>
+                <p></p>
+                <p>MTN Mobile Money: 0544898989</p><br><br>
+                <p><b>You can also send your gifts through our Bank Account</b></p>
+                <p>GCB Bank, Accra West Branch</p>
+                <p>Taifa</p>
+                <p>Account Number: <b>4226548975642</b></p>
             </section>
         </main>
     {% endblock content %}
