--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="{% url 'about' %}">ABOUT</a>
                         <a class="nav-link" href="{% url 'gallery' %}">GALLERY</a>
                         <a class="nav-link" href="{% url 'events' %}">EVENTS</a>
-                        <a class="nav-link" href="{% url 'give' %}">GIVE</a>
+                        <a class="nav-link" href="{% url 'give' %}">PARTNER WITH US</a>
                     </div>
                     <div class="nav-elements nav-ele2">
                         <a href="{% url 'about'  %}">I'M NEW</a>
