--- a/templates/give.html
+++ b/templates/give.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/give.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
 
-        <main class="container">
+        <main class="main-body">
             <section class="body-section">
 
                 <div class="verse">
