--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,7 @@
             <div class="logo-nav-elements">
                 <div class="nav-menu-items">
                     <div class="logo">
-                        <div>
-                            <img src="{% static './img/LOGO1 cropped.png' %}" alt="LOGO">
-                        </div>
+                        <img src="{% static './img/LOGO1 cropped.png' %}" alt="LOGO">            
                     </div>
 
                     <img class="breadcrumb" id="menu-img" style="align-items: center;" src="{% static './img/menu_img.png' %}" alt="">
@@ -48,7 +46,7 @@
             </div>
         </header>
 
-        <main id="main-body">
+        <main id="main-body" style="">
             <h1 style="font-size: 24px; color: #44a2bc;">ABOUT US</h1>
             <div class="main-items">
                 <div class="about-text-side lazy fade-in">
