--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+#main-body{
+    border: 1px solid rgb(196, 176, 176);
+}
+
 body{
     width: 100%;
     font-family: 'TT Firs Neue', 'TT Firs Neue Light', 'TT Firs Neue Thin';
@@ -29,8 +33,14 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
+.logo{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .logo img{
-    width:100%;
+    width:20rem;
     height:150px;
 }
 
@@ -231,8 +241,8 @@ h1, h2, h3, h4 {
         transition: all 1s;
     }
     .logo img {
-        width: 100%;
-        height: 100px;
+        width: 16rem;
+        height: 120px;
     }
 
     .nav-elements{
